--- a/node/package.json
+++ b/node/package.json
@@ -16,6 +16,7 @@
     "multiparty": "^4.1.2",
     "orm": "^2.1.26",
     "promise": "^7.0.3",
+    "request": "^2.58.0",
     "serve-favicon": "~2.2.1",
     "weixin-apis": "^1.5.2"
   }
