--- a/node/package.json
+++ b/node/package.json
@@ -14,6 +14,7 @@
     "express": "~4.12.4",
     "morgan": "~1.5.3",
     "multiparty": "^4.1.2",
+    "mysql": "^2.7.0",
     "orm": "^2.1.26",
     "promise": "^7.0.3",
     "request": "^2.58.0",
