--- a/node/package.json
+++ b/node/package.json
@@ -21,6 +21,7 @@
     "serve-favicon": "~2.2.1",
     "tufu": "^0.1.1",
     "wechat": "^2.0.1",
+    "wechat-api": "^1.9.3",
     "weixin-apis": "^1.5.2"
   }
 }
