--- a/node/package.json
+++ b/node/package.json
@@ -9,13 +9,13 @@
     "async": "^1.2.1",
     "body-parser": "~1.12.4",
     "cookie-parser": "~1.3.5",
-    "cron": "~1.0.9",
     "debug": "~2.2.0",
     "ejs": "~2.3.1",
     "express": "~4.12.4",
     "morgan": "~1.5.3",
     "multiparty": "^4.1.2",
     "mysql": "^2.7.0",
+    "node-schedule": "^0.2.9",
     "orm": "^2.1.26",
     "promise": "^7.0.3",
     "request": "^2.58.0",
